--- a/apps/vehicle-monitor/CMakeLists.txt
+++ b/apps/vehicle-monitor/CMakeLists.txt
@@ -71,7 +71,7 @@ add_executable(${PROJECT_NAME}
     src/vehicle_monitor.cpp
 )
 
-target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 target_link_libraries(${PROJECT_NAME}
     PRIVATE
