--- a/srv/can/CMakeLists.txt
+++ b/srv/can/CMakeLists.txt
@@ -32,7 +32,7 @@ target_sources(CanExecutable PRIVATE
 
 target_include_directories(CanExecutable PRIVATE
     ${CMAKE_SOURCE_DIR}/src
-    ${CMAKE_SOURCE_DIR}/../../general
+    ${CMAKE_SOURCE_DIR}/../general
 )
 
 target_link_libraries(CanExecutable PRIVATE
